--- a/internal/plugin/plugin.go.tmpl
+++ b/internal/plugin/plugin.go.tmpl
@@ -25,7 +25,7 @@ import (
                             "{{ . | toLower }}",
                         {{- end -}}
                     },
-                    Match: guard.Match({{ .AuthenticatedAccess.RoleBased.Match }}),
+                    Requirement: guard.Requirement({{ .AuthenticatedAccess.RoleBased.Requirement }}),
                 },
             {{- end }}
             {{- if .AuthenticatedAccess.PolicyBased }}
@@ -35,7 +35,7 @@ import (
                         "{{ . }}",
                     {{- end -}}
                 },
-                Match: guard.Match({{ .AuthenticatedAccess.PolicyBased.Match }}),
+                Requirement: guard.Requirement({{ .AuthenticatedAccess.PolicyBased.Requirement }}),
             },
             {{- end }}
         },
